[project]
name = "specless"
version = "0.0.2"
description = "Package to learn specification and synthesize strategy from demonstrations"
authors = [
  { name = "Kandai Watanabe", email = "kandai.wata@gmail.com" },
  {name = "Georgios Fainekos", email = "fainekos@gmail.com"},
  {name = "Bardh Hoxha", email = "bardhh@gmail.com"},
  {name = "Morteza Lahijanian", email = "morteza.lahijanian@colorado.edu"},
  {name = "Hideki Okamoto", email = "hideki.okamoto@toyota.com"},
  {name = "Sriram Sankaranarayanan", email = "srirams@colorado.edu"}
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8,<3.13"

dependencies = [
    "bidict>=0.23.1,<0.24",
    "click>=8.1.7,<9.0",
    "cvxopt>=1.3.2,<2.0; platform_system=='Linux'",
    "cvxopt>=1.3.2,<2.0; platform_system=='Windows'",
    "distinctipy>=1.3.4,<2.0",
    "graphviz>=0.20.3,<0.21",
    "gurobipy>=10.0.3,<11.0",
    "gym_minigrid@git+https://github.com/watakandai/gym-minigrid.git@gym-minigrid-legacy",
    "gymnasium>=0.29.1,<0.30",
    "ipykernel>=6.29.5,<7.0",
    "ipython>=8.12.3,<9.0",
    "ltlf2dfa>=1.0.1,<2.0",
    "matplotlib>=3.7.5,<4.0",
    "moviepy>=1.0.3,<2.0",
    "networkx>=3.1,<4.0",
    "numpy>=1.26,<2.0; python_version>='3.9'",
    "numpy<1.25; python_version=='3.8'",
    "ortools>=9.10.4067,<10.0",
    "pm4py>=2.7.11.11,<3.0",
    "pydot>=3.0.1,<4.0",
    "pyyaml>=6.0.1,<7.0",
    "scikit-learn>=1.3.2,<2.0",
    "scipy>=1.9.3,<1.13; python_version>='3.8' and python_version<'3.12'",
    "scipy>=1.12,<2.0; python_version>='3.12'",
    "tox>=3.28.0,<4.0",
    "ruff>=0.1.15,<1.0",
    "mypy>=1.11.0,<2.0",
    "pytest>=7.4.4,<8.0",
    "pytest-mock>=3.14.0,<4.0",
    "pytest-cov>=4.1.0,<5.0",
    "sphinx-rtd-theme",
    "sphinx"
]


[tool.uv.pip]
system = true
